--- a/ccdea/.project
+++ b/ccdea/.project
@@ -16,6 +16,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>docput</name>
+			<type>2</type>
+			<location>C:/Development/Workspaces/CCDEA_GITHUB/storage/mq-binding/target/generated-sources/docput</location>
+		</link>
+		<link>
 			<name>formadaptors-main-java</name>
 			<type>2</type>
 			<location>C:/Development/Workspaces/CCDEA_GITHUB/webapp/formadaptors/src/main/java</location>
