--- a/storage/persistence/pom.xml
+++ b/storage/persistence/pom.xml
@@ -41,6 +41,10 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.tukaani</groupId>
+			<artifactId>xz</artifactId>
+		</dependency>
     </dependencies>
 
     <build>
