--- a/webapp/taskspace/src/main/resources/strings/ru/rb/ccdea/xforms/FilesTabNlsProp.properties
+++ b/webapp/taskspace/src/main/resources/strings/ru/rb/ccdea/xforms/FilesTabNlsProp.properties
@@ -18,3 +18,6 @@ MSG_CONTENT_SOURCE_CODE=Source System
 MSG_CREATION_DATE=Creation Date
 MSG_MODIFY_DATE=Last Modify Date
 MSG_CONTENT_TYPE=Content Type
+MSG_VERSION=Version
+MSG_SIZE=Size
+MSG_DOCTYPE_AND_STATE=Document type/state
