Исправлено сообщение "Нет файлов"

--- a/webapp/taskspace/src/main/resources/strings/ru/rb/ccdea/xforms/FilesTabNlsProp.properties
+++ b/webapp/taskspace/src/main/resources/strings/ru/rb/ccdea/xforms/FilesTabNlsProp.properties
@@ -10,7 +10,7 @@ MSG_ATTR_DESCRIPTION=Attribute
 MSG_CURRENT_VALUE=New value
 MSG_OLD_VALUE=Old value
 MSG_SYSTEM_CODE=System
-MSG_NO_DATA=Previous versions were not found.
+MSG_NO_DATA=No files
 
 MSG_NAME=Name
 MSG_CONTENT_SOURCE_ID=Source ID
