--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,38 @@
     <groupId>ru.rb.ccdea</groupId>
     <artifactId>ccdea</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>ru.rb.ccdea</groupId>
+            <artifactId>mq-adapter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.rb.ccdea</groupId>
+            <artifactId>jobs</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.rb.ccdea</groupId>
+            <artifactId>services-impl</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
     <packaging>pom</packaging>
 
     <name>CCDEA</name>
@@ -25,7 +57,7 @@
 	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.version>1.0-SNAPSHOT</project.version>
         <!--taskspace.folder>${project.basedir}/target/webapps/taskspace</taskspace.folder-->
-        <taskspace.folder>${project.basedir}/../../../apache-tomcat-6.0.32/webapps/ccdea</taskspace.folder>
+        <taskspace.folder>C:/tomcat6_rb/webapps/ccdea</taskspace.folder>
 	</properties>
 
     <dependencyManagement>
