--- a/storage/mq-adapter/pom.xml
+++ b/storage/mq-adapter/pom.xml
@@ -39,5 +39,9 @@
             <groupId>ru.rb.ccdea</groupId>
             <artifactId>persistence</artifactId>
         </dependency>
+		<dependency>
+	        <groupId>junit</groupId>
+	        <artifactId>junit</artifactId>
+	    </dependency>
     </dependencies>
 </project>
