--- a/storage/persistence/pom.xml
+++ b/storage/persistence/pom.xml
@@ -45,6 +45,10 @@
 			<groupId>org.tukaani</groupId>
 			<artifactId>xz</artifactId>
 		</dependency>
+		<dependency>
+	        <groupId>junit</groupId>
+	        <artifactId>junit</artifactId>
+	    </dependency>
     </dependencies>
 
     <build>
