--- a/storage/services-impl/pom.xml
+++ b/storage/services-impl/pom.xml
@@ -24,6 +24,10 @@
             <groupId>ru.rb.ccdea</groupId>
             <artifactId>mq-binding</artifactId>
         </dependency>
+		<dependency>
+	        <groupId>junit</groupId>
+	        <artifactId>junit</artifactId>
+	    </dependency>
     </dependencies>
 
 </project>
