--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,9 @@
     <properties>
 	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.version>1.0-SNAPSHOT</project.version>
-        <!--taskspace.folder>${project.basedir}/target/webapps/taskspace</taskspace.folder-->
-        <taskspace.folder>C:/tomcat6_rb/webapps/ccdea</taskspace.folder>
+        <!--<taskspace.folder>${project.basedir}/target/webapps/taskspace</taskspace.folder>-->
+        <!--<taskspace.folder>C:/tomcat6_rb/webapps/ccdea</taskspace.folder>-->
+		<taskspace.folder>${project.basedir}/../../../apache-tomcat-6.0.32/webapps/ccdea</taskspace.folder>
 	</properties>
 
     <dependencyManagement>
