--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ dar
 CCDEA_api.dar
 CCDEA_api.installparam
 /ccdea/bin
+/.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/remote-index/*.fdt
+/.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/remote-index/_7.fdx
+/.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/remote-index/_7.frq
+/.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/remote-index/_7.nrm
+/.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/remote-index/_7.prx
+/.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/remote-index/_7.tis
